@@ -4,6 +4,7 @@
   * Added #cell_elements to ElementLocators
   * Added #image_elements to ElementLocators
   * Added #form_elements to ElementLocators
+  * Added #list_item_elements to ElementLocators
 === 2016-12-12
 * Enhancements
   * Added #hidden_field_elements to ElementLocators
